# cerberus

./: .gitignore  Cargo.toml
ansible/: .gitignore  README.md  docker-on-luks.yml  inventory.yml  lvm-migration.yml  remount-secure.yml  setup-admin-users.yml  setup-docker.yml  setup-sudo-user.yml  setup-users.yml  setup.yml  unmount-secure.yml
ansible/files/: ansible.pub  erdenebayar.pub  oleg.pub  tulgaa.pub
ansible/roles/install-docker/tasks/: main.yml  ubuntu.yml
ansible/roles/luks-volume/tasks/: main.yml
src/: config.rs  device.rs  integrity.rs  main.rs  signing-key
src/cli/: config.rs
src/crypto/: hash.rs
src/monitors/: file.rs
src/test/: example-config.toml  signing-key
